# Compilateur_Telecom1A

./: .gitignore  CMakeCache.txt  Makefile  README.md  ast.mli  cc.sh  cmake_install.cmake  compile-cpp.sh  compile.sh  compile.sh.orig  compiler_test.sh  dispo_soutenance  file.c  file.s  imperative_compiler.sh  interpret-cpp.sh  interpret-py.sh  interpret.sh  log.txt  main  out  ptipython.sh  test.c  test.json
Bash/: build-compiler.sh  build-dune-py.sh  build-micropy.sh  compile-cpp.sh  compile-py.sh  compile-py2.sh  finalproject-py.sh  interpret-cpp.sh  interpret-gcc.sh  interpret-py.sh  ptipython-cpp.sh  ptipython-py.sh  test-interpret-sub.sh  test-interpret.sh  test-parser.sh
Compiler/: CMakeLists.txt  README.md  compile.sh  compiler.cpp  compiler.hpp  data.hpp  exception.cpp  exception.hpp  functions.cpp  functions.hpp  json_reader.cpp  json_reader.hpp  main.cpp  template.s  token.cpp  token.hpp  write_assembly.cpp  write_assembly.hpp
CompilerPy/: ast.ml  lexer.mll  parser.mly  tojson.ml
FinalProjectCpp/: context.cpp  context.hpp  token.cpp
FinalProjectPy/: ast.ml  core.py  ep.py  ex.py  template.txt
Interpreter/: CMakeLists.txt  README.md  _test.cpp  _test.hpp  exception.cpp  exception.hpp  functions.cpp  functions.hpp  functions.hpp.orig  interpreter.cpp  interpreter.hpp  json_reader.cpp  json_reader.hpp  json_simplifier.cpp  json_simplifier.hpp  main.cpp  simplified_token.cpp  simplified_token.hpp  token.cpp  token.hpp
MicroPy/: micropy_interpreter.py
MicroPyCpp/: CMakeLists.txt  include.hpp  jsonReader.cpp  jsonReader.hpp  jsonReader.txt  main.cpp  tk.txt  token.cpp  token.hpp  types.cpp  types.hpp
ParserBetter/: own-tester.sh
ParserLexer/: ast.ml  ast.mli  lexer.mll  parser.mly
ParserPy/: ast.ml  lexer.mll  parser.mly  tojson.ml
PythonCompiler/: compiler.py  out.s  py-test.sh  template.s
PythonInterpreter/: interpreter.py
TestC/: fonction.c  local_var.c  monstruosity.c  read.c  syntax.c  variable.c
TestFiles/: CMakeLists.txt  arithmetic.c  fonction.c  fonction.s  little.py  local_var.c  medium.py  operation.c  simple.c  simple.s  syntax.c  (+5 more)
(+57 files in other folders)
